avec le component searchBar mais on l'utilise pas

--- a/src/components/pokemonCard/index.css
+++ b/src/components/pokemonCard/index.css
@@ -17,47 +17,51 @@
     height: 350px; /* Adjust card height */
     width: 250px; /* Adjust card width */
     text-align: center; /* Center text */
+    position: relative; /* For positioning the types container */
 }
 
 .pokemon-name {
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
-    color: #000; /* Black text color */
+    color: #000; 
     text-align: left;
-    margin-left: 10px; /* Move name slightly to the left */
+    margin-left: 10px; 
 }
-.pokemon-info {
-    font-size: 10x; /* Smaller font size for Pokemon information */
-    margin: 5px 0; /* Reduce the margin between elements */
-    text-size-adjust: 5px; /* Allow text to be resized */
-    line-height: 1.2px;
-}
+
 .pokemon-name-container {
     display: flex;
     justify-content: flex-start; /* Align name to the left */
     align-items: center;
     width: 100%;
 }
-.image-container {
-    border: 2px solid #808080; /* Thicker grey border */
-    padding: 0.5px;
-    margin: 5px;
-    border-radius: 3px; /* Rounded corners */
-    height: 500px; /* Adjust card height */
-    width: 250px; /* Adjust card width */
-}
 
+.image-container {
+    border: 2px solid #808080;
+    padding: 1px;
+    margin: 1px;
+    border-radius: 8px; /* Rounded corners */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+    height: 150px; 
+    width: 250px; 
+    text-align: center;
+}
 .pokemon-image {
-    width: 100px;
-    height: 100px;
-    padding-left: 5px; /* Add padding inside the border */
-    background-color: #fff; /* White background for the rectangle */ 
+    width: 150px;
+    height: 150px;
+    
+    background-color: #fff; 
 }
 
 .pokemon-types-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     display: flex;
-    justify-content: center;
-    width: 100%;
+    justify-content: flex-end;
+    width: auto;
 }
 
 .pokemon-types-container > *:not(:first-child) {
@@ -66,16 +70,37 @@
 
 .pokemon-stats-container {
     font-size: 15px;
-    line-height: 0.5px;
+    line-height: 1px;
     display: flex;
     flex-direction: column;
     align-items: center; /* Center stats horizontally */
     width: 100%;
 }
+.pokemon-stats-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.button-container {
+}
+.stat-row {
+display: flex;
+justify-content: space-between;
+width: 100%;
+}
+
+.stat-label {
+text-align: center;
+flex: 1;
+}
+
+.stat-value {
+text-align: right;
+flex: 1;
+}
+
+/*.button-container {
     font-size: 15px;
     display: flex;
     justify-content: center;
     margin-top: 10px;
-}
+}*/
