--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 .card {
-  display: ;
+  display: flex;
 }
 
 @keyframes logo-spin {
@@ -35,7 +35,13 @@
     animation: logo-spin infinite 20s linear;
   }
 }
-
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 .card {
   padding: 2em;
 }
